// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Select /> accepts implicit and explicit items 1`] = `
<Select
  className=""
  items={
    [
      "a",
      "b",
      {
        "value": "c",
      },
      "d",
      {
        "label": "E",
        "value": "e",
      },
      "f",
    ]
  }
  onChange={[Function]}
  placeholder="Select ..."
  value={null}
>
  <div
    className="tss-1xbqkr6-container common_select"
  >
    <div
      onTouchStart={[Function]}
      role="presentation"
    >
      <span>
        Select ...
      </span>
      <span
        className="tss-1b1j1g2-selectHandle"
      >
        ▾
      </span>
    </div>
    <div
      className="tss-c2wo8u-items"
    >
      <SelectItem
        className=""
        key="a"
        label="a"
        onSelect={[Function]}
        selected={null}
        value="a"
      >
        <div
          className="tss-1p90zzb-item"
          onTouchEnd={[Function]}
        >
          a
        </div>
      </SelectItem>
      <SelectItem
        className=""
        key="b"
        label="b"
        onSelect={[Function]}
        selected={null}
        value="b"
      >
        <div
          className="tss-1p90zzb-item"
          onTouchEnd={[Function]}
        >
          b
        </div>
      </SelectItem>
      <SelectItem
        className=""
        key="c"
        label="c"
        onSelect={[Function]}
        selected={null}
        value="c"
      >
        <div
          className="tss-1p90zzb-item"
          onTouchEnd={[Function]}
        >
          c
        </div>
      </SelectItem>
      <SelectItem
        className=""
        key="d"
        label="d"
        onSelect={[Function]}
        selected={null}
        value="d"
      >
        <div
          className="tss-1p90zzb-item"
          onTouchEnd={[Function]}
        >
          d
        </div>
      </SelectItem>
      <SelectItem
        className=""
        key="e"
        label="E"
        onSelect={[Function]}
        selected={null}
        value="e"
      >
        <div
          className="tss-1p90zzb-item"
          onTouchEnd={[Function]}
        >
          E
        </div>
      </SelectItem>
      <SelectItem
        className=""
        key="f"
        label="f"
        onSelect={[Function]}
        selected={null}
        value="f"
      >
        <div
          className="tss-1p90zzb-item"
          onTouchEnd={[Function]}
        >
          f
        </div>
      </SelectItem>
    </div>
  </div>
</Select>
`;

exports[`<Select /> renders with implicit items (closed) 1`] = `
<Select
  className=""
  items={
    [
      "a",
      "b",
      "c",
      "d",
      "e",
      "f",
    ]
  }
  onChange={[Function]}
  placeholder="Select ..."
  value={null}
>
  <div
    className="tss-1xbqkr6-container common_select"
  >
    <div
      onTouchStart={[Function]}
      role="presentation"
    >
      <span>
        Select ...
      </span>
      <span
        className="tss-1b1j1g2-selectHandle"
      >
        ▾
      </span>
    </div>
  </div>
</Select>
`;

exports[`<Select /> renders with implicit items (opened) 1`] = `
<Select
  className=""
  items={
    [
      "a",
      "b",
      "c",
      "d",
      "e",
      "f",
    ]
  }
  onChange={[Function]}
  placeholder="Select ..."
  value={null}
>
  <div
    className="tss-1xbqkr6-container common_select"
  >
    <div
      onTouchStart={[Function]}
      role="presentation"
    >
      <span>
        Select ...
      </span>
      <span
        className="tss-1b1j1g2-selectHandle"
      >
        ▾
      </span>
    </div>
    <div
      className="tss-c2wo8u-items"
    >
      <SelectItem
        className=""
        key="a"
        label="a"
        onSelect={[Function]}
        selected={null}
        value="a"
      >
        <div
          className="tss-1p90zzb-item"
          onTouchEnd={[Function]}
        >
          a
        </div>
      </SelectItem>
      <SelectItem
        className=""
        key="b"
        label="b"
        onSelect={[Function]}
        selected={null}
        value="b"
      >
        <div
          className="tss-1p90zzb-item"
          onTouchEnd={[Function]}
        >
          b
        </div>
      </SelectItem>
      <SelectItem
        className=""
        key="c"
        label="c"
        onSelect={[Function]}
        selected={null}
        value="c"
      >
        <div
          className="tss-1p90zzb-item"
          onTouchEnd={[Function]}
        >
          c
        </div>
      </SelectItem>
      <SelectItem
        className=""
        key="d"
        label="d"
        onSelect={[Function]}
        selected={null}
        value="d"
      >
        <div
          className="tss-1p90zzb-item"
          onTouchEnd={[Function]}
        >
          d
        </div>
      </SelectItem>
      <SelectItem
        className=""
        key="e"
        label="e"
        onSelect={[Function]}
        selected={null}
        value="e"
      >
        <div
          className="tss-1p90zzb-item"
          onTouchEnd={[Function]}
        >
          e
        </div>
      </SelectItem>
      <SelectItem
        className=""
        key="f"
        label="f"
        onSelect={[Function]}
        selected={null}
        value="f"
      >
        <div
          className="tss-1p90zzb-item"
          onTouchEnd={[Function]}
        >
          f
        </div>
      </SelectItem>
    </div>
  </div>
</Select>
`;

exports[`<Select /> renders without items 1`] = `
<Select
  className=""
  items={[]}
  onChange={[Function]}
  placeholder="Select ..."
  value={null}
>
  <div
    className="tss-1xbqkr6-container common_select"
  >
    <div
      onTouchStart={[Function]}
      role="presentation"
    >
      <span>
        Select ...
      </span>
      <span
        className="tss-1b1j1g2-selectHandle"
      >
        ▾
      </span>
    </div>
    <div
      className="tss-c2wo8u-items"
    />
  </div>
</Select>
`;

exports[`<Select /> triggers callback on change 1`] = `
<Select
  className=""
  items={
    [
      "a",
      "b",
      "c",
      "d",
      "e",
      "f",
    ]
  }
  onChange={[Function]}
  placeholder="Select ..."
  value={null}
>
  <div
    className="tss-1xbqkr6-container common_select"
  >
    <div
      onTouchStart={[Function]}
      role="presentation"
    >
      <span>
        Select ...
      </span>
      <span
        className="tss-1b1j1g2-selectHandle"
      >
        ▾
      </span>
    </div>
    <div
      className="tss-c2wo8u-items"
    >
      <SelectItem
        className=""
        key="a"
        label="a"
        onSelect={[Function]}
        selected={null}
        value="a"
      >
        <div
          className="tss-1p90zzb-item"
          onTouchEnd={[Function]}
        >
          a
        </div>
      </SelectItem>
      <SelectItem
        className=""
        key="b"
        label="b"
        onSelect={[Function]}
        selected={null}
        value="b"
      >
        <div
          className="tss-1p90zzb-item"
          onTouchEnd={[Function]}
        >
          b
        </div>
      </SelectItem>
      <SelectItem
        className=""
        key="c"
        label="c"
        onSelect={[Function]}
        selected={null}
        value="c"
      >
        <div
          className="tss-1p90zzb-item"
          onTouchEnd={[Function]}
        >
          c
        </div>
      </SelectItem>
      <SelectItem
        className=""
        key="d"
        label="d"
        onSelect={[Function]}
        selected={null}
        value="d"
      >
        <div
          className="tss-1p90zzb-item"
          onTouchEnd={[Function]}
        >
          d
        </div>
      </SelectItem>
      <SelectItem
        className=""
        key="e"
        label="e"
        onSelect={[Function]}
        selected={null}
        value="e"
      >
        <div
          className="tss-1p90zzb-item"
          onTouchEnd={[Function]}
        >
          e
        </div>
      </SelectItem>
      <SelectItem
        className=""
        key="f"
        label="f"
        onSelect={[Function]}
        selected={null}
        value="f"
      >
        <div
          className="tss-1p90zzb-item"
          onTouchEnd={[Function]}
        >
          f
        </div>
      </SelectItem>
    </div>
  </div>
</Select>
`;
